[package]
name = "bevy_p2p"
version = "0.1.0"
edition = "2024"
description = "a steam/iroh p2p networking crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bgkillas/bevy_p2p"

[features]
default=["iroh", "example"]
steam=["dep:steamworks"]
iroh=["dep:iroh", "dep:rustc-hash"]
example=["dep:bevy"]

[dependencies]
steamworks = {version = "0.13.1", optional = true}
iroh = {version = "1.0.2", optional = true}
bevy_ecs = {version = "0.19.0", default-features = false}
bevy_app = {version = "0.19.0", default-features = false}
bevy_log = {version = "0.19.0", default-features = false}
bevy-tokio-tasks = "0.19.0"
bitcode = "0.6.9"
bevy = {version = "0.19.0", default-features=false, features = ["debug"], optional = true}
rustc-hash = {version = "2.1.3", optional = true}