[package]
name = "bevy_p2p"
version = "0.1.0"
edition = "2024"
description = "a steam/iroh p2p networking crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bgkillas/bevy_p2p"

[features]
default=[]
steam=["dep:steamworks"]
example=["dep:bevy"]

[dependencies]
steamworks = {version = "0.13.1", optional = true}
iroh = "1.0.2"
bevy_ecs = {version = "0.19.0", default-features = false}
bevy_app = {version = "0.19.0", default-features = false}
bevy_log = {version = "0.19.0", default-features = false}
bevy-tokio-tasks = "0.19.0"
bitcode = "0.6.9"
bevy = {version = "0.19.0", default-features=false, features = ["debug"], optional = true}
rustc-hash = "2.1.3"
zerocopy = "0.9.0-alpha.0"

[lints.clippy]
pedantic = {level = "warn", priority = -1}
shadow_reuse = "warn"
unused_trait_names = "warn"
missing_inline_in_public_items = "warn"
str-to-string = "warn"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"
missing_fields_in_debug = "allow"
missing_safety_doc = "allow"
similar-names = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
missing-inline-in-public-items = "allow"
needless_pass_by_value = "allow"

cast_precision_loss = "allow"
as_conversions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"